fixing bug with tags showing on higher z-index than the emoji picker component

--- a/src/app/pages/home/components/main/components/new-post/new-post.component.scss
+++ b/src/app/pages/home/components/main/components/new-post/new-post.component.scss
@@ -39,6 +39,7 @@ $square-width: 110px;
       border: 1px solid $light-gray;
       border-radius: 11px;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      z-index: 1000;
 
       width: 480px;
       top: 47px;
